@@ -1,4 +1,8 @@
 2007-12-13  Jonh Wendell <jwendell@gnome.org>
+	* src/vinagre-window.c (create_menu_bar_and_toolbar):
+	Flag some toolbar buttons as "important". Closes #503468
+
+2007-12-13  Jonh Wendell <jwendell@gnome.org>
 	* configure.ac: Dropped -Wall, fix suncc compile, closes #503358
 	  Thanks to Halton Huo.
 
